fixing z-index

--- a/src/index.css
+++ b/src/index.css
@@ -157,7 +157,7 @@ form .remember-forgot{
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1;
+  z-index: 2;
 }
 
 .problems{
